# rvoip

./: *  .dockerignore  .gitignore  AUDIO_STREAM_INTEGRATION_PLAN.md  AUDIT-003-comprehensive.md  AUDIT-004-remediation.md  B2BUA_IMPLEMENTATION_PLAN.md  CALL_CENTER_REFERENCE_ARCHITECTURE.md  CHANGELOG.md  CODEC_NEGOTIATION_FIX_PLAN.md  Cargo.toml  Containerfile  EXAMPLES.md  G729A_IMPLEMENTATION_STATUS.md  HOLD_RESUME_API_PROPOSAL.md  HOLD_RESUME_IMPLEMENTATION_PLAN.md  LIBRARY_DESIGN_ARCHITECTURE.md  LICENSE  MEDIA_SERVER_PLAN.md  ORCHESTRATION_CORE_SPEC.md  PLAN-SRTP-UNIFICATION.md  PLATFORM_LAYER_ROADMAP.md  README.md  REGISTRATION_SUMMARY.md  RTP_RECEIVE_IMPLEMENTATION_PLAN.md  RTP_RECEIVE_PATH_FIX_PLAN.md  SESSION_CORE_CLEANUP_PLAN.md  SIMPLIFIED_BLOCKING_API_PLAN.md  SPRINT1_COMPLETE.md  SPRINT1_FINAL_STATUS.md  TODO.md  USE_CASES.md  c_output.txt  call_transfer_implementation_plan_v2.md  configuration_screen_implementation_plan.md  deny.toml  docker-compose.yml  fix-plan.md  run_e2e_test.sh  rust_test_main.rs  (+11 more)
crates/ai-copilot/: Cargo.toml
crates/ai-copilot/src/: config.rs  db.rs  lib.rs
crates/audio-core/: Cargo.toml  DEVELOPMENT_PLAN.md  README.md
crates/audio-core/src/: error.rs  lib.rs  types.rs
crates/audio-core/tests/: format_conversion_tests.rs  g711_codec_test.rs  integration_tests.rs  peer_to_peer_integration_test.rs  performance_tests.rs  real_network_peer_to_peer_test.rs
crates/auth-core/: AUTHENTICATION_PLAN.md  Cargo.toml  README.md
crates/auth-core/src/: aauth.rs  bearer.rs  dpop.rs  error.rs  jwks.rs  jwt.rs  lib.rs  sip_digest.rs  types.rs
crates/auth-core/tests/: dpop.rs  jwks.rs  jwt.rs
crates/b2bua/: Cargo.toml  README.md
crates/b2bua/examples/: simple_bridge.rs
crates/b2bua/src/: error.rs  lib.rs  service.rs  types.rs
crates/call-engine/: CALL_CENTER_STATE_MACHINE.md  Cargo.toml  README.md
crates/call-engine/migrations/: 20240101000001_initial_schema.sql
crates/call-engine/src/: config.rs  error.rs  lib.rs  server.rs
crates/call-engine/tests/: api_integration.rs  b2bua_bridge_test.rs  call_center_tests.rs  diagnostic_agent_scaling.rs  integration_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_client.rs  config.rs  main.rs  output.rs
crates/client-core/: Cargo.toml  README.md
crates/client-core/examples/: README.md  audio_benchmark.rs  audio_device_discovery.rs  audio_loopback.rs  audio_streaming_demo.rs  voip_audio_demo.rs
crates/client-core/src/: call.rs  error.rs  events.rs  lib.rs  registration.rs
crates/client-core/tests/: audio_device_integration.rs  audio_exchange_test.rs  automatic_port_allocation.rs  call_operations.rs  client_lifecycle.rs  client_manager_audio_integration.rs  custom_audio_transmission_test.rs  debug_hang.rs  error_recovery.rs  hold_resume_test.rs  media_preferences_test.rs  registration_tests.rs  terminated_state_emission_test.rs  terminating_state_test.rs  transfer_test.rs
crates/codec-core/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  fix_compilation.sh
crates/codec-core/src/: comparison.csv  error.rs  lib.rs  side_by_side.txt  types.rs
crates/dialog-core/: Cargo.toml  README.md
crates/dialog-core/examples/: basic_dialog.rs  debug_state_error.rs  dialog_recovery.rs  global_events_test.rs  multi_dialog.rs  phase3_integration_showcase.rs  simple_test.rs
crates/dialog-core/src/: auth.rs  lib.rs
crates/dialog-core/tests/: api_layer_tests.rs  bye_termination_test.rs  dialog_forking.rs  dialog_lifecycle.rs  dialog_recovery.rs  dialog_state.rs  generated_sip_compliance.rs  options_handling.rs  phase3_integration_tests.rs  prack_test.rs  refer_handling_test.rs  refer_header_test.rs  refer_transfer_tests.rs  register_flow_test.rs  request_routing.rs  sdp_negotiation.rs  sip_compliance.rs  subscription_dialogs.rs  unified_api_tests.rs
crates/ice-core/: Cargo.toml
crates/ice-core/src/: config.rs  error.rs  lib.rs  stun.rs
crates/infra-common/: Cargo.toml  GLOBAL_EVENT_COORDINATOR_PLAN.md  README.md  TODO.md
crates/infra-common/benches/: api_bench.rs  core_bus.rs
crates/infra-common/examples/: README.md  api_bench_both.rs  api_simple_fastpath.rs  (+4 more)
crates/integration-tests/: Cargo.toml
crates/intermediary-core/: Cargo.toml  IMPLEMENTATION_PLAN.md
crates/mcp-server/: Cargo.toml
crates/media-core/: CODEC_CORE_INTEGRATION_PLAN.md  COMPLETION_SUMMARY.md  Cargo.toml  FEATURE_IMPLEMENTATION_PLAN.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_INTEGRATION.md  README.md  RTCP_STATS_INTEGRATION_STATUS.md  TEST_FIXES_SUMMARY.md  TODO.md  ZERO_COPY_PERFORMANCE_RESULTS.md
crates/orchestration-core/: CARVE_PLAN.md  CONCURRENCY_PLAN.md  CONVERSATION_PROTOCOL.md  Cargo.toml  INTERFACE_DESIGN.md  PERFORMANCE_PLAN.md  voip-3-conversation-model.md
crates/registrar-core/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/rtp-core/: Cargo.toml  OPTION_3_COMPLETION.md  OPTION_A_COMPLETION.md  README.md  README_PRODUCTION.md  TODO.md  client-key.pem  server-cert.pem  server-key.pem
crates/rvoip-client/: Cargo.toml  README.md
crates/rvoip-core/: CONVERSATION_PROTOCOL.md  Cargo.toml  GAP_PLAN.md  INTERFACE_DESIGN.md  PRD.md  README.md
crates/rvoip-harness/: Cargo.toml
crates/rvoip-identity/: Cargo.toml
crates/rvoip-sip/: Cargo.toml  README.md  RELEASE_HARDENING_PLAN.md  SIP_API_DESIGN.md  SIP_API_DESIGN_2.md  SIP_API_DESIGN_2_AUDIT.md  SIP_API_DESIGN_2_COMPLETION_AUDIT.md  SIP_API_DESIGN_2_GAP_PLAN.md  SIP_API_DESIGN_2_GAP_PLAN_AUDIT.md  SIP_API_DESIGN_2_REMAINING_WORK.md  STIR_SHAKEN_AND_PROXY_PLAN.md
crates/rvoip-sip-dialog/: CHANGELOG.md  Cargo.toml  README.md
crates/rvoip-sip-proxy/: Cargo.toml
crates/rvoip-sip-registrar/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_PLAN.md
crates/rvoip-stir-shaken/: Cargo.toml
crates/rvoip-vcon/: Cargo.toml
rvoip/: ARCHITECTURE_FIX.md  BASIC_SIP_TODO.md  Cargo.toml  DIALOG-TRANSACTION-INTEGRATION.md  IMPROVEMENTS.md  INTEGRATION_PLAN.md  PRIORITY-FIXES.md  README.md  REFER_IMPLEMENTATION_SUMMARY.md  SRTP_ISSUES_ANALYSIS.md  TODO.md  test.rs
rvoip/crates/: MEDIA_PREFERENCES_IMPLEMENTATION.md
rvoip/examples/: README.md
(+7718 files in other folders)
