[workspace]
resolver = "2"

members = [
    "crates/sip-core",
    "crates/sip-transport",
    "crates/transaction-core",
    "crates/rtp-core",
    "crates/media-core",
    "crates/session-core",
    "crates/call-engine",
    "crates/sip-client",
    "crates/infra-common",
    "examples/simple-softswitch",
    "examples/sip-message-test",
    "examples/rtp-loopback",
    "examples/rtp-g711",
    "examples/simple-session",
    "examples/simple-call-engine",
    "examples/sip-test-client",
    "examples/sip-client-demo",
    "examples/sip-parser-demo",
]

# Silence all Rust warnings
[workspace.lints.rust]
warnings = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Utilities
bytes = { version = "1.5", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# Testing
proptest = "1.4" 
