[package]
name = "rvoip-ai-copilot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI Copilot for rvoip call center — real-time voice AI with multi-provider support"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
http = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

# Database (for conversation logging)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
